--- a/package.json
+++ b/package.json
@@ -19,10 +19,21 @@
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "@ionic-native/admob-free": "^5.33.0",
+    "@ionic-native/app-version": "^5.32.1",
+    "@ionic-native/clipboard": "^5.32.1",
+    "@ionic-native/core": "^5.32.1",
+    "@ionic-native/market": "^5.32.1",
+    "@ionic-native/social-sharing": "^5.32.1",
     "@ionic/angular": "^5.5.2",
+    "cordova-admob-sdk": "0.24.1",
     "cordova-android": "9.0.0",
+    "cordova-plugin-admob-free": "0.27.0",
     "cordova-plugin-androidx": "^3.0.0",
     "cordova-plugin-androidx-adapter": "^1.1.3",
+    "cordova-plugin-firebase-analytics": "^5.0.0",
+    "cordova-plugin-firebase-config": "^5.0.0",
+    "cordova-promise-polyfill": "0.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -38,12 +49,17 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "cordova-clipboard": "^1.3.0",
+    "cordova-plugin-app-version": "^0.1.12",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
+    "cordova-plugin-market": "^1.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-x-socialsharing": "^6.0.3",
+    "es6-promise-plugin": "^4.2.2",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.2.0",
@@ -67,7 +83,19 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-clipboard": {},
+      "cordova-plugin-x-socialsharing": {},
+      "cordova-plugin-market": {},
+      "cordova-plugin-androidx-adapter": {},
+      "cordova-plugin-androidx": {},
+      "cordova-plugin-app-version": {},
+      "cordova-plugin-firebase-config": {
+        "ANDROID_FIREBASE_CONFIG_VERSION": "20.0.+"
+      },
+      "cordova-plugin-admob-free": {
+        "ADMOB_APP_ID": "ca-app-pub-8376945539001469~7052079963"
+      }
     },
     "platforms": [
       "android"
